# calculator_server_FastAPI

./: .gitignore  Dockerfile  README.md  datasource.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
calculator_server/: calculations.py  db_interface.py  loger.py
docs/: openapi.json
tests/: test_calculations.py
