[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator_server_FastAPI_idziegrzesprzezbobrow"
version = "0.0.1"
authors = [
  { name="Greg", email="" },
]
description = "A simple FastAPI calculator server."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs==22.2.0",
    "exceptiongroup==1.1.0",
    "iniconfig==1.1.1",
    "packaging==22.0",
    "pluggy==1.0.0",
    "tomli==2.0.1",
    "httpx==0.23.3",
    "pydantic==1.10.4",
    "fastapi==0.89.1",
    "uvicorn==0.20.0",
    "starlette-prometheus==0.9.0",
    "pymongo==4.3.3"
]
packages = [
    {include = "calculator_server"},
    {exclude = "tests"}
]
exclude = [
    "venv_serv",
    ".gitignore",
    ".pytest_cache"
]

[project.optional-dependencies]
test = ["pytest==7.2.1"]